# WebookProcessor

./: .env-template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  main.py  pyproject.toml  release_cmd.md  render.yaml  requirements.txt
.github/workflows/: renew-gmail-watch.yml
app/: __init__.py  cal_com_handler.py  github_handler.py  gmail_handler.py  models.py  notion_handler.py  registry.py  simple_handler.py  strava_handler.py
app/utils/: generate_key.py  strava_client.py
app/utils/gmail/: .gitignore  README.md  main.tf  outputs.tf  renew_gmail_watch.py  terraform.tfvars.example  variables.tf
config/: main.tf  variables.tf
scripts/: simulate_webhook.sh
tests/: base_test.py  test_processors.py
