[project]
name = "WebhookProcessor"
version = "0.1.0"
description = "A simple webhook to SMS service."
requires-python = ">=3.12"
dependencies = [
    "freesms==0.3.0",
    "fastapi==0.121.2",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "uvicorn==0.38.0",
    "google-auth==2.29.0",
    "google-api-python-client==2.127.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.5",
    "pre-commit==4.4.0",
    "git-cliff==2.10.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors
# W = pycodestyle warnings
# F = Pyflakes
# I = isort
select = ["E", "F", "W", "I"]
